UI: finish the first page

--- a/src/i18n/hws/zh_CN.json
+++ b/src/i18n/hws/zh_CN.json
@@ -12,10 +12,16 @@
   "leftmenu.dataset1": "数据项1",
   "dataset.gotobuypage": "前往购买页",
   "consoleName": "ModelBox",
+  "example":"示例",
+  "arrange":"编排",
+  "task":"任务",
+  "firstPage": "首页",
+  "exampleDisplay":"示例展示",
   "editor": "任务编排",
   "taskLists": "任务列表",
   "graph.cavans.tip": "按住CTRL+鼠标左键可拖动画布",
   "toolBar.switchButton": "切换布局",
+  "toolBar.runGraphButton":"运行",
   "toolBar.backButton": "回退",
   "toolBar.redoButton": "重做",
   "toolBar.zoomInButton": "放大",
@@ -23,24 +29,26 @@
   "toolBar.zoomResetButton": "重置缩放",
   "toolBar.zoomFitButton": "自适应",
   "toolBar.nameLabel": "当前：",
-  "toolBar.newButton": "新建",
+  "toolBar.newButton": "新建项目",
+  "toolBar.openProjectButton": "打开项目",
+  "toolBar.newFlowunitButton": "新建功能单元",
   "toolBar.renameButton": "重命名",
-  "toolBar.saveAsButton": "另存为",
+  "toolBar.saveAsButton": "保存",
   "toolBar.graphSettingButton": "图属性",
-  "toolBar.selectDialogButton": "选择图表",
+  "toolBar.selectDialogButton": "加载图",
   "toolBar.solutionDialogButton": "解决方案",
   "toolBar.solutionDialogFile": "文件路径",
   "toolBar.deleteDialogButton": "删除",
   "toolBar.setting.name": "名称",
   "toolBar.setting.desc": "描述",
   "toolBar.setting.basic": "通用设置",
-  "toolBar.setting.skipDefault": "禁用系统流单元",
+  "toolBar.setting.skipDefault": "禁用系统功能单元",
   "toolBar.setting.graphRankdir": "图布局",
   "toolBar.setting.graphRankdir.leftRight": "左右布局",
   "toolBar.setting.graphRankdir.topBottom": "上下布局",
   "toolBar.notSavedTitle": "未保存",
   "toolBar.notSavedMessage": "您确认丢弃此修改吗?",
-  "toolBar.setting.dir": "流单元路径",
+  "toolBar.setting.dir": "功能单元路径",
   "toolBar.setting.perf": "性能设置",
   "toolBar.setting.perf.enable": "是否启用",
   "toolBar.setting.perf.trace.enable": "启用跟踪",
