complete most function of demo page

--- a/src/i18n/hws/zh_CN.json
+++ b/src/i18n/hws/zh_CN.json
@@ -18,7 +18,7 @@
   "firstPage": "首页",
   "exampleDisplay":"示例展示",
   "editor": "任务编排",
-  "taskLists": "任务列表",
+  "taskLists": "任务管理",
   "graph.cavans.tip": "按住CTRL+鼠标左键可拖动画布",
   "toolBar.switchButton": "切换布局",
   "toolBar.runGraphButton":"运行",
@@ -34,6 +34,7 @@
   "toolBar.newFlowunitButton": "新建功能单元",
   "toolBar.renameButton": "重命名",
   "toolBar.saveAsButton": "保存",
+  "toolBar.openTutorial": "开启教程",
   "toolBar.graphSettingButton": "图属性",
   "toolBar.selectDialogButton": "加载图",
   "toolBar.solutionDialogButton": "解决方案",
