--- a/src/i18n/hws/zh_CN.json
+++ b/src/i18n/hws/zh_CN.json
@@ -94,5 +94,10 @@
   "message.taskHasBeenCreatedSuccessfully": "任务创建成功",
   "message.failToCreateTask": "任务创建失败",
   "message.failToQueryTask": "查询任务状态失败",
-  "message.cannotConnectToSelf": "不能连接到自己"
+  "message.cannotConnectToSelf": "不能连接到自己",
+  "tutorial.toolbar": "工具栏",
+  "tutorial.undoredo": "回退/重做",
+  "tutorial.zoominout": "放大/缩小",
+  "tutorial.selectGraph": "选择示例"
+
 }
