fix bug of graph setting and graph select

--- a/src/i18n/hws/zh_CN.json
+++ b/src/i18n/hws/zh_CN.json
@@ -20,6 +20,7 @@
   "editor": "任务编排",
   "taskLists": "任务管理",
   "graph.cavans.tip": "按住CTRL+鼠标左键可拖动画布",
+  "toolBar.projectName": "项目名称",
   "toolBar.switchButton": "切换布局",
   "toolBar.runGraphButton":"运行",
   "toolBar.backButton": "回退",
@@ -28,14 +29,19 @@
   "toolBar.zoomOutButton": "缩小",
   "toolBar.zoomResetButton": "重置缩放",
   "toolBar.zoomFitButton": "自适应",
-  "toolBar.nameLabel": "当前：",
+  "toolBar.nameLabel": "当前Graph：",
   "toolBar.newButton": "新建项目",
+  "toolBar.newGraphButton": "新建图",
   "toolBar.openProjectButton": "打开项目",
-  "toolBar.newFlowunitButton": "新建功能单元",
+  "toolBar.newFlowunitButton": "新建单元",
+  "toolBar.new": "新建",
   "toolBar.renameButton": "重命名",
+  "toolBar.flowunit": "功能单元",
+  "toolBar.project": "项目",
   "toolBar.saveAsButton": "保存",
   "toolBar.openTutorial": "开启教程",
   "toolBar.graphSettingButton": "图属性",
+  "toolBar.graph": "图相关",
   "toolBar.selectDialogButton": "加载图",
   "toolBar.solutionDialogButton": "解决方案",
   "toolBar.solutionDialogFile": "文件路径",
@@ -54,7 +60,7 @@
   "toolBar.setting.perf.enable": "是否启用",
   "toolBar.setting.perf.trace.enable": "启用跟踪",
   "toolBar.setting.perf.session.enable": "按会话分类",
-  "toolBar.setting.perf.path": "存储路径",
+  "toolBar.setting.perf.path": "性能分析路径",
   "toolBar.select.name": "名称",
   "toolBar.select.lastChanged": "最近一次修改",
   "toolBar.select.dotSource": "DOT资源",
