add createProject and createFlowunit

--- a/src/i18n/hws/zh_CN.json
+++ b/src/i18n/hws/zh_CN.json
@@ -65,6 +65,20 @@
   "toolBar.select.lastChanged": "最近一次修改",
   "toolBar.select.dotSource": "DOT资源",
   "toolBar.select.operation": "操作",
+  "toolBar.modal.programLanguage":"编程语言",
+  "toolBar.modal.projectPath":"项目路径",
+  "toolBar.modal.flowunitName":"功能单元名称",
+  "toolBar.modal.flowunitPath":"功能单元路径",
+  "toolBar.modal.portOption":"端口选项",
+  "toolBar.modal.inputOutput":"输入\\输出",
+  "toolBar.modal.input":"输入",
+  "toolBar.modal.output":"输出",
+  "toolBar.modal.dataType":"数据类型",
+  "toolBar.modal.deviceType":"处理类型",
+  "toolBar.modal.add":"添加",
+  "toolBar.modal.flowUnitType":"功能单元类型",
+  "toolBar.modal.flowUnitGroup":"功能单元分组",
+  
   "modal.okButton": "确认",
   "modal.cancelButton": "取消",
   "modal.createTaskModal": "新建任务",
