add new project and search directory

--- a/src/i18n/hws/zh_CN.json
+++ b/src/i18n/hws/zh_CN.json
@@ -65,7 +65,7 @@
   "toolBar.select.lastChanged": "最近一次修改",
   "toolBar.select.dotSource": "DOT资源",
   "toolBar.select.operation": "操作",
-  "toolBar.modal.programLanguage": "编程语言",
+  "toolBar.modal.unitType": "单元类型",
   "toolBar.modal.projectPath": "项目路径",
   "toolBar.modal.flowunitName": "功能单元名称",
   "toolBar.modal.flowunitPath": "功能单元路径",
@@ -76,8 +76,11 @@
   "toolBar.modal.dataType": "数据类型",
   "toolBar.modal.deviceType": "处理类型",
   "toolBar.modal.add": "添加",
-  "toolBar.modal.flowUnitType": "功能单元类型",
+  "toolBar.modal.flowUnitType": "功能类型",
   "toolBar.modal.flowUnitGroup": "功能单元分组",
+  "toolBar.modal.folder": "文件夹",
+  "toolBar.modal.return": "返回上级",
+  "toolBar.modal.deviceNum": "设备号",
   "modal.okButton": "确认",
   "modal.cancelButton": "取消",
   "modal.createTaskModal": "新建任务",
@@ -115,8 +118,19 @@
   "message.failToQueryTask": "查询任务状态失败",
   "message.cannotConnectToSelf": "不能连接到自己",
   "message.loadNodeFail": "加载Node信息失败",
+  "message.createProjectFailedPleaseCheck": "创建项目失败，请查询日志以获更多讯息。",
+  "message.noFolder": "未找到任何文件夹",
   "tutorial.toolbar": "工具栏",
   "tutorial.undoredo": "回退/重做",
   "tutorial.zoominout": "放大/缩小",
-  "tutorial.selectGraph": "选择示例"
+  "tutorial.selectGraph": "选择示例",
+  "first.title": "ModelBox AI推理平台",
+  "first.introduction": "ModelBox是一套专门为AI开发者提供的易于使用，高效，高扩展的AI推理开发框架，它可以帮助AI开发者快速完成从模型文件到AI推理应用的开发和上线工作，降低AI算法落地门槛，同时带来AI应用的高稳定性和极致性能。",
+  "first.introductionExample": "示例页面将展示一些例如mnsit的在ModelBox中实现的例子，让用户可以直观地感受到使用ModelBox进行推理的便捷高效。",
+  "first.introductionGraph": "编排页面将提供开发者可视化编排推理的界面，使得开发者只需关注于具体的功能单元实现。",
+  "first.introductionTask": "任务页面将显示所有正在运行的任务状态。",
+  "inference": "推理",
+  "virtualType": "推理引擎",
+  "modelEntry": "模型文件名称",
+  "enginePlugin": "引擎插件"
 }
