--- a/src/i18n/hws/zh_CN.json
+++ b/src/i18n/hws/zh_CN.json
@@ -39,6 +39,7 @@
   "toolBar.flowunit": "功能单元",
   "toolBar.project": "项目",
   "toolBar.saveAsButton": "保存",
+  "toolBar.saveGraphButton": "保存图",
   "toolBar.openTutorial": "开启教程",
   "toolBar.graphSettingButton": "图属性",
   "toolBar.graph": "图相关",
