update change of ui 0218

--- a/src/i18n/hws/zh_CN.json
+++ b/src/i18n/hws/zh_CN.json
@@ -34,6 +34,7 @@
   "toolBar.newGraphButton": "新建图",
   "toolBar.openProjectButton": "打开项目",
   "toolBar.newFlowunitButton": "新建单元",
+  "toolBar.refreshFlowunitButton":"重载单元",
   "toolBar.new": "新建",
   "toolBar.renameButton": "重命名",
   "toolBar.flowunit": "功能单元",
@@ -68,6 +69,7 @@
   "toolBar.select.operation": "操作",
   "toolBar.modal.unitType": "单元类型",
   "toolBar.modal.projectPath": "项目路径",
+  "toolBar.modal.model": "项目模板",
   "toolBar.modal.flowunitName": "功能单元名称",
   "toolBar.modal.flowunitPath": "功能单元路径",
   "toolBar.modal.portOption": "端口选项",
