adjustment and debug of solution page

--- a/src/i18n/hws/zh_CN.json
+++ b/src/i18n/hws/zh_CN.json
@@ -41,7 +41,7 @@
   "toolBar.project": "项目",
   "toolBar.saveAsButton": "保存",
   "toolBar.saveGraphButton": "保存图",
-  "toolBar.openTutorial": "开启教程",
+  "toolBar.openTutorial": "打开指引",
   "toolBar.graphSettingButton": "图属性",
   "toolBar.graph": "图相关",
   "toolBar.selectDialogButton": "加载图",
