--- a/src/i18n/hws/zh_CN.json
+++ b/src/i18n/hws/zh_CN.json
@@ -123,10 +123,23 @@
   "message.loadNodeFail": "加载Node信息失败",
   "message.createProjectFailedPleaseCheck": "创建项目失败，请查询日志以获更多讯息。",
   "message.noFolder": "未找到任何文件夹",
+  "message.checkInTaskPage": "请前往任务管理页面查看明细",
+  "message.selectedSolutionNotFound": "未找到所选样例",
+  "message.createProjectFirst": "请先新建一个项目",
+  "message.createProjectSuccess": "成功创建项目",
+  "message.createProjectFail": "创建项目失败",
   "tutorial.toolbar": "工具栏",
   "tutorial.undoredo": "回退/重做",
   "tutorial.zoominout": "放大/缩小",
   "tutorial.selectGraph": "选择示例",
+  "tutorial.toolbarGuide": "工具栏集成了各种常用工具",
+  "tutorial.redoGuide": "在进行图编排的过程中，可以使用回退/重做进行修改，也可以在下方文本编辑栏中使用Ctrl+z/Ctrl+y快捷键",
+  "tutorial.zoomGuide": "放大后或者缩小图，也可以使用鼠标滚轮",
+  "tutorial.restGuide": "重置缩放大小比例",
+  "tutorial.fitGuide": "图自适应居中显示在屏幕中央",
+  "tutorial.layoutGuide": "垂直布局或者横向布局（默认为垂直布局）",
+  "tutorial.runGuide": "运行当前的图，图的运行状态将显示在任务管理页面",
+  "tutorial.graphGuide": "用来进行编排的主要界面，此处仅为示例。按着Ctrl+鼠标左键可以拖拽画布。当图中的任一结点处于选中状态时（蓝框），直接使用鼠标左键也可以拖拽画布。图的所有变化，将以graphviz dot形式显示在下方文本编辑框中。",
   "first.title": "ModelBox AI推理平台",
   "first.introduction": "ModelBox是一套专门为AI开发者提供的易于使用，高效，高扩展的AI推理开发框架，它可以帮助AI开发者快速完成从模型文件到AI推理应用的开发和上线工作，降低AI算法落地门槛，同时带来AI应用的高稳定性和极致性能。",
   "first.introductionExample": "示例页面将展示一些例如mnsit的在ModelBox中实现的例子，让用户可以直观地感受到使用ModelBox进行推理的便捷高效。",
