--- a/src/i18n/hws/zh_CN.json
+++ b/src/i18n/hws/zh_CN.json
@@ -73,7 +73,7 @@
   "toolBar.modal.portName": "端口名称",
   "toolBar.modal.flowunitName": "功能单元名称",
   "toolBar.modal.flowunitPath": "功能单元路径",
-  "toolBar.modal.portOption": "端口选项",
+  "toolBar.modal.portOption": "端口",
   "toolBar.modal.inputOutput": "输入\\输出",
   "toolBar.modal.input": "输入",
   "toolBar.modal.output": "输出",
