UI: update changes of backend

--- a/src/i18n/hws/zh_CN.json
+++ b/src/i18n/hws/zh_CN.json
@@ -20,7 +20,7 @@
   "editor": "任务编排",
   "taskLists": "任务管理",
   "graph.cavans.tip": "按住CTRL+鼠标左键可拖动画布",
-  "toolBar.projectName": "项目名称",
+  "toolBar.project_name": "项目名称",
   "toolBar.switchButton": "切换布局",
   "toolBar.runGraphButton": "运行",
   "toolBar.backButton": "回退",
@@ -34,7 +34,7 @@
   "toolBar.newGraphButton": "新建图",
   "toolBar.openProjectButton": "打开项目",
   "toolBar.newFlowunitButton": "新建单元",
-  "toolBar.refreshFlowunitButton":"重载单元",
+  "toolBar.refreshFlowunitButton":"刷新单元",
   "toolBar.new": "新建",
   "toolBar.renameButton": "重命名",
   "toolBar.flowunit": "功能单元",
@@ -68,19 +68,19 @@
   "toolBar.select.dotSource": "DOT资源",
   "toolBar.select.operation": "操作",
   "toolBar.modal.unitType": "单元类型",
-  "toolBar.modal.projectPath": "项目路径",
-  "toolBar.modal.model": "项目模板",
-  "toolBar.modal.portName": "端口名称",
-  "toolBar.modal.flowunitName": "功能单元名称",
+  "toolBar.modal.project_path": "项目路径",
+  "toolBar.modal.template": "项目模板",
+  "toolBar.modal.port_name": "端口名称",
+  "toolBar.modal.flowunit_name": "功能单元名称",
   "toolBar.modal.flowunitPath": "功能单元路径",
   "toolBar.modal.portOption": "端口",
   "toolBar.modal.inputOutput": "输入\\输出",
   "toolBar.modal.input": "输入",
   "toolBar.modal.output": "输出",
-  "toolBar.modal.dataType": "数据类型",
-  "toolBar.modal.deviceType": "处理类型",
+  "toolBar.modal.data_type": "数据类型",
+  "toolBar.modal.device": "处理类型",
   "toolBar.modal.add": "添加",
-  "toolBar.modal.flowUnitType": "功能类型",
+  "toolBar.modal.flowunit_type": "功能类型",
   "toolBar.modal.flowUnitGroup": "功能单元分组",
   "toolBar.modal.folder": "文件夹",
   "toolBar.modal.return": "返回上级",
@@ -102,7 +102,7 @@
   "attributePanel.title": "节点（",
   "attributePanel.title1": "）配置",
   "attributePanel.namePlaceholder": "请输入名称",
-  "attributePanel.topName": "顶点名称：",
+  "attributePanel.topName": "功能单元名称：",
   "attributePanel.arrayGroup": "数组分组：",
   "attributePanel.selectType": "请选择类型",
   "tasklist.newTask": "新建任务",
@@ -149,6 +149,6 @@
   "first.introductionTask": "任务页面将显示所有正在运行的任务状态。",
   "inference": "推理",
   "virtualType": "推理引擎",
-  "modelEntry": "模型文件名称",
+  "model": "模型文件名称",
   "enginePlugin": "引擎插件"
 }
