--- a/src/i18n/hws/zh_CN.json
+++ b/src/i18n/hws/zh_CN.json
@@ -85,6 +85,9 @@
   "toolBar.modal.folder": "文件夹",
   "toolBar.modal.return": "返回上级",
   "toolBar.modal.deviceNum": "设备号",
+  "toolBar.reLeaseFlowunitPath":"发布功能单元路径",
+  "toolBar.debugFlowunitPath":"调试功能单元路径",
+  "insertPanel.flowunitList":"功能单元列表",
   "modal.okButton": "确认",
   "modal.cancelButton": "取消",
   "modal.createTaskModal": "新建任务",
