UI: add effect of demo

--- a/src/i18n/hws/zh_CN.json
+++ b/src/i18n/hws/zh_CN.json
@@ -35,6 +35,7 @@
   "toolBar.openProjectButton": "打开项目",
   "toolBar.newFlowunitButton": "新建单元",
   "toolBar.refreshFlowunitButton":"刷新单元",
+  "toolBar.chooseDemo":"请选择示例",
   "toolBar.new": "新建",
   "toolBar.renameButton": "重命名",
   "toolBar.flowunit": "功能单元",
@@ -42,6 +43,7 @@
   "toolBar.saveAsButton": "保存",
   "toolBar.saveGraphButton": "保存图",
   "toolBar.openTutorial": "打开指引",
+  "toolBar.selectDemo": "选择示例",
   "toolBar.graphSettingButton": "图属性",
   "toolBar.graph": "图相关",
   "toolBar.selectDialogButton": "加载图",
