UI: fix drop down menu

--- a/src/i18n/hws/zh_CN.json
+++ b/src/i18n/hws/zh_CN.json
@@ -109,7 +109,7 @@
   "attributePanel.title1": "）配置",
   "attributePanel.namePlaceholder": "请输入名称",
   "attributePanel.topName": "功能单元名称：",
-  "attributePanel.arrayGroup": "数组分组：",
+  "attributePanel.arrayGroup": "功能单元分组：",
   "attributePanel.selectType": "请选择类型",
   "tasklist.newTask": "新建任务",
   "tasklist.searchBarPlaceHolder": "请输入名称搜索",
