--- a/src/i18n/hws/zh_CN.json
+++ b/src/i18n/hws/zh_CN.json
@@ -149,6 +149,7 @@
   "message.groupOfFlowunitIsNecessary": "缺少功能单元分组",
   "message.atLeastOneInputOrOutput": "至少要有一个input或者output",
   "message.wrongFlowunitTypePleaseChooseGPUDevice": "功能单元类型错误，请选择带有GPU的设备",
+  "message.duplicatePortName": "端口名重复",
   
   
   "tutorial.toolbar": "工具栏",
