--- a/src/i18n/hws/zh_CN.json
+++ b/src/i18n/hws/zh_CN.json
@@ -38,6 +38,10 @@
   "toolBar.newFlowunitButton": "新建单元",
   "toolBar.refreshFlowunitButton":"刷新单元",
   "toolBar.chooseDemo":"请选择示例",
+  "toolBar.debug": "调试",
+  "toolBar.apiDebug": "api调试",
+  "toolBar.scriptDebug": "脚本调试",
+  "toolBar.log": "日志",
   "toolBar.new": "新建",
   "toolBar.renameButton": "重命名",
   "toolBar.flowunit": "功能单元",
