--- a/src/i18n/hws/zh_CN.json
+++ b/src/i18n/hws/zh_CN.json
@@ -78,6 +78,7 @@
   "toolBar.select.operation": "操作",
   "toolBar.modal.unitType": "单元类型",
   "toolBar.modal.project_path": "项目路径",
+  "toolBar.base64":"图片转base64",
   "toolBar.modal.template": "项目模板",
   "toolBar.modal.port_name": "端口名称",
   "toolBar.modal.flowunit_name": "功能单元名称",
