UI: fix demo page && enhance debug postman

--- a/src/i18n/hws/zh_CN.json
+++ b/src/i18n/hws/zh_CN.json
@@ -115,8 +115,8 @@
   "insertPanels.tip.isVirtualmodel": "是否虚拟模块：",
   "insertPanels.tip.yes": "是",
   "insertPanels.tip.no": "否",
-  "attributePanel.title": "功能单元（",
-  "attributePanel.title1": "）配置",
+  "attributePanel.title": "",
+  "attributePanel.title1": "",
   "attributePanel.namePlaceholder": "请输入名称",
   "attributePanel.topName": "功能单元名称：",
   "attributePanel.arrayGroup": "功能单元分组：",
