--- a/src/i18n/hws/zh_CN.json
+++ b/src/i18n/hws/zh_CN.json
@@ -54,6 +54,7 @@
   "toolBar.openTutorial": "打开指引",
   "toolBar.selectDemo": "选择示例",
   "toolBar.graphSettingButton": "图属性",
+  "toolBar.graphSelectButton":"选择图",
   "toolBar.graph": "图相关",
   "toolBar.selectDialogButton": "加载图",
   "toolBar.solutionDialogButton": "解决方案",
@@ -174,6 +175,7 @@
   "tutorial.layoutGuide": "垂直布局或者横向布局（默认为垂直布局）",
   "tutorial.runGuide": "运行当前的图，图的运行状态将显示在任务管理页面",
   "tutorial.graphGuide": "用来进行编排的主要界面，此处仅为示例。按着Ctrl+鼠标左键可以拖拽画布。当图中的任一结点处于选中状态时（蓝框），直接使用鼠标左键也可以拖拽画布。图的所有变化，将以graphviz dot形式显示在下方文本编辑框中。",
+  "tutorial.textGuide": "对应图编排界面，可使用标准的DOT语法进行文本编辑，所修改内容将反映至图上。",
   "first.title": "ModelBox AI推理平台",
   "first.introduction": "ModelBox是一套专门为AI开发者提供的易于使用，高效，高扩展的AI推理开发框架，它可以帮助AI开发者快速完成从模型文件到AI推理应用的开发和上线工作，降低AI算法落地门槛，同时带来AI应用的高稳定性和极致性能。",
   "first.introductionExample": "示例页面将展示一些例如mnsit的在ModelBox中实现的例子，让用户可以直观地感受到使用ModelBox进行推理的便捷高效。",
