UI: add path validator && unit tests

--- a/src/i18n/hws/zh_CN.json
+++ b/src/i18n/hws/zh_CN.json
@@ -1,6 +1,8 @@
 {
   "attribute.helpText": "帮助文档",
   "attribute.deviceId": "设备号",
+  "attribute.desc": "描述",
+  "attribute.conf": "配置",
   "common.home": "首页",
   "common.back": "返回",
   "common.help": "帮助",
@@ -22,10 +24,10 @@
   "editor": "任务编排",
   "taskLists": "任务管理",
   "graph.cavans.tip": "按住CTRL+鼠标左键可拖动画布",
-  "graph.creation":"成功新建图",
-  "graph.name":"图名称",
-  "toolBar.path.name":"路径：",
-  "toolBar.graph.name":"图名称：",
+  "graph.creation": "成功新建图",
+  "graph.name": "图名称",
+  "toolBar.path.name": "路径：",
+  "toolBar.graph.name": "图名称：",
   "toolBar.project_name": "项目名称",
   "toolBar.switchButton": "切换布局",
   "toolBar.runGraphButton": "运行",
@@ -42,8 +44,8 @@
   "toolBar.newGraphButton": "新建图",
   "toolBar.openProjectButton": "打开项目",
   "toolBar.newFlowunitButton": "新建单元",
-  "toolBar.refreshFlowunitButton":"刷新单元",
-  "toolBar.chooseDemo":"请选择示例",
+  "toolBar.refreshFlowunitButton": "刷新单元",
+  "toolBar.chooseDemo": "请选择示例",
   "toolBar.debug": "调试",
   "toolBar.apiDebug": "api调试",
   "toolBar.scriptDebug": "脚本调试",
@@ -53,12 +55,12 @@
   "toolBar.flowunit": "功能单元",
   "toolBar.project": "项目",
   "toolBar.saveAsButton": "保存",
-  "toolBar.clearCacheButton":"关闭",
+  "toolBar.clearCacheButton": "关闭",
   "toolBar.saveGraphButton": "保存图",
   "toolBar.openTutorial": "打开指引",
   "toolBar.selectDemo": "选择示例",
   "toolBar.graphSettingButton": "图属性",
-  "toolBar.graphSelectButton":"选择图",
+  "toolBar.graphSelectButton": "选择图",
   "toolBar.graph": "图相关",
   "toolBar.selectDialogButton": "加载图",
   "toolBar.solutionDialogButton": "解决方案",
@@ -86,7 +88,7 @@
   "toolBar.select.operation": "操作",
   "toolBar.modal.unitType": "单元类型",
   "toolBar.modal.project_path": "项目路径",
-  "toolBar.base64":"转base64",
+  "toolBar.base64": "转base64",
   "toolBar.modal.template": "项目模板",
   "toolBar.modal.port_name": "端口名称",
   "toolBar.modal.flowunit_name": "功能单元名称",
@@ -103,13 +105,12 @@
   "toolBar.modal.folder": "文件夹",
   "toolBar.modal.return": "返回上级",
   "toolBar.modal.deviceNum": "设备号",
-  "toolBar.reLeaseFlowunitPath":"发布功能单元路径",
-  "toolBar.debugFlowunitPath":"调试功能单元路径",
-  "toolBar.copyModel":"拷贝模型",
-  "toolBar.yoloType":"yolo类型",
-
-  "modal.virtualFlowunitType":"虚拟单元类型",
-  "insertPanel.flowunitList":"功能单元列表",
+  "toolBar.reLeaseFlowunitPath": "发布功能单元路径",
+  "toolBar.debugFlowunitPath": "调试功能单元路径",
+  "toolBar.copyModel": "拷贝模型",
+  "toolBar.yoloType": "yolo类型",
+  "modal.virtualFlowunitType": "虚拟单元类型",
+  "insertPanel.flowunitList": "功能单元列表",
   "modal.okButton": "确认",
   "modal.cancelButton": "取消",
   "modal.createTaskModal": "新建任务",
@@ -139,6 +140,7 @@
   "management.doYouWantToDeleteThisRecord?": "您确认删除此条数据吗?",
   "management.taskHasBeenDeletedSuccessfully": "任务删除成功",
   "management.failToDeleteTask": "任务删除失败",
+  "message.noSpace": "请确保模型路径中不存在空格",
   "message.cannotFindCorrespondingDefinition": "未能找到节点相关定义",
   "message.duplicatedNodeName": "节点名称不能跟port名重复！",
   "message.taskWithTheSameNameHasAlreadyBeenExisted": "已存在同名任务",
@@ -166,9 +168,7 @@
   "message.wrongFlowunitTypePleaseChooseGPUDevice": "功能单元类型错误，请选择带有GPU的设备",
   "message.duplicatePortName": "端口名重复",
   "message.duplicateVirtualFlowunit": "已存在同名虚拟单元",
-  "message.graphNameCannotBeNull":"图名称不能为空",
-  
-  
+  "message.graphNameCannotBeNull": "图名称不能为空",
   "tutorial.toolbar": "工具栏",
   "tutorial.undoredo": "回退/重做",
   "tutorial.zoominout": "放大/缩小",
@@ -189,6 +189,6 @@
   "first.introductionTask": "任务页面将显示所有正在运行的任务状态。",
   "inference": "推理",
   "virtualType": "推理引擎",
-  "model": "模型文件名称",
+  "model": "模型路径",
   "enginePlugin": "引擎插件"
 }
