UI: add default value of default flowunit

--- a/src/i18n/hws/zh_CN.json
+++ b/src/i18n/hws/zh_CN.json
@@ -54,8 +54,8 @@
   "toolBar.renameButton": "重命名",
   "toolBar.flowunit": "功能单元",
   "toolBar.project": "项目",
-  "toolBar.saveAsButton": "保存",
-  "toolBar.clearCacheButton": "关闭",
+  "toolBar.saveAsButton": "保存图",
+  "toolBar.clearCacheButton": "关闭项目",
   "toolBar.saveGraphButton": "保存图",
   "toolBar.openTutorial": "打开指引",
   "toolBar.selectDemo": "选择示例",
@@ -117,7 +117,7 @@
   "panelEar.componentLabel": "组件库",
   "panelEar.editToolLabel": "编辑器",
   "insertPanels.tip.version": "版本：",
-  "insertPanels.tip.name": "功能单元：",
+  "insertPanels.tip.name": "节点名称：",
   "insertPanels.tip.topType": "功能单元类型：",
   "insertPanels.tip.description": "描述：",
   "insertPanels.tip.portDetail": "端口详情: ",
@@ -133,7 +133,7 @@
   "attributePanel.selectType": "请选择类型",
   "tasklist.newTask": "新建任务",
   "tasklist.searchBarPlaceHolder": "请输入名称搜索",
-  "tasklist.jobName": "名称",
+  "tasklist.jobName": "图名称",
   "tasklist.jobStatus": "状态",
   "tasklist.jobMessage": "消息",
   "tasklist.jobOperation": "操作",
