UI: add unit tests & fix bugs & add flowunit template

--- a/src/i18n/hws/zh_CN.json
+++ b/src/i18n/hws/zh_CN.json
@@ -108,7 +108,7 @@
   "toolBar.modal.return": "返回上级",
   "toolBar.modal.deviceNum": "设备号",
   "toolBar.reLeaseFlowunitPath": "发布功能单元路径",
-  "toolBar.debugFlowunitPath": "调试功能单元路径",
+  "toolBar.debugFlowunitPath": "功能单元扫描路径",
   "toolBar.copyModel": "拷贝模型",
   "toolBar.yoloType": "yolo类型",
   "modal.virtualFlowunitType": "虚拟单元类型",
@@ -160,6 +160,7 @@
   "message.createProjectFirst": "请先新建一个项目",
   "message.createProjectSuccess": "成功保存Graph",
   "message.createProjectFail": "创建项目失败",
+  "message.inputAndOutputIsNecessary":"输入和输出端口至少各有一个",
   "message.saveYourProjectFirst": "请先保存您的项目。",
   "message.nameOfFlowunitIsNecessary": "缺少功能单元的名字",
   "message.langOfFlowunitIsNecessary": "缺少功能单元的单元类型",
