UI: fix attribute panel error and add unittest

--- a/src/i18n/hws/zh_CN.json
+++ b/src/i18n/hws/zh_CN.json
@@ -146,7 +146,8 @@
   "management.failToDeleteTask": "任务删除失败",
   "message.noSpace": "请确保模型路径中不存在空格",
   "message.cannotFindCorrespondingDefinition": "未能找到节点相关定义",
-  "message.duplicatedNodeName": "节点名称不能跟port名重复！",
+  "message.duplicatedNodeNamewithPort": "节点名称不能跟port名重复！",
+  "message.duplicatedNodeName": "节点名称不能重复",
   "message.taskWithTheSameNameHasAlreadyBeenExisted": "已存在同名任务",
   "message.taskHasBeenCreatedSuccessfully": "任务创建成功",
   "message.failToCreateTask": "任务创建失败",
@@ -160,7 +161,7 @@
   "message.createProjectFirst": "请先新建一个项目",
   "message.createProjectSuccess": "成功保存Graph",
   "message.createProjectFail": "创建项目失败",
-  "message.inputAndOutputIsNecessary":"输入和输出端口至少各有一个",
+  "message.inputAndOutputIsNecessary": "输入和输出端口至少各有一个",
   "message.saveYourProjectFirst": "请先保存您的项目。",
   "message.nameOfFlowunitIsNecessary": "缺少功能单元的名字",
   "message.langOfFlowunitIsNecessary": "缺少功能单元的单元类型",
