UI: improve UI and D env

--- a/src/i18n/hws/zh_CN.json
+++ b/src/i18n/hws/zh_CN.json
@@ -2,6 +2,7 @@
   "attribute.helpText": "帮助文档",
   "attribute.deviceId": "设备号",
   "attribute.desc": "描述",
+  "attribute.advance": "高级",
   "attribute.conf": "配置",
   "common.home": "首页",
   "common.back": "返回",
@@ -32,6 +33,7 @@
   "toolBar.switchButton": "切换布局",
   "toolBar.runGraphButton": "运行",
   "toolBar.stopGraphButton": "停止",
+  "toolBar.sycnGraphButton": "同步图",
   "toolBar.restartGraphButton": "重启",
   "toolBar.backButton": "回退",
   "toolBar.redoButton": "重做",
