UI: add toolbar unittest

--- a/src/i18n/hws/zh_CN.json
+++ b/src/i18n/hws/zh_CN.json
@@ -124,7 +124,7 @@
   "insertPanels.tip.name": "节点名称：",
   "insertPanels.tip.topType": "功能单元类型：",
   "insertPanels.tip.description": "描述：",
-  "insertPanels.tip.portDetail": "端口详情: ",
+  "insertPanels.tip.portDetail": "端口说明: ",
   "insertPanels.tip.constraint": "约束: ",
   "insertPanels.tip.isVirtualmodel": "是否虚拟模块：",
   "insertPanels.tip.yes": "是",
