UI: update changes of requirement

--- a/src/i18n/hws/zh_CN.json
+++ b/src/i18n/hws/zh_CN.json
@@ -27,8 +27,10 @@
   "graph.cavans.tip": "按住CTRL+鼠标左键可拖动画布",
   "graph.creation": "成功新建图",
   "graph.name": "图名称",
-  "toolBar.path.name": "路径：",
+  "toolBar.path": "路径：",
   "toolBar.graph.name": "图名称：",
+  "toolBar.project.name": "项目名称：",
+  "toolBar.project.path": "项目路径：",
   "toolBar.project_name": "项目名称",
   "toolBar.switchButton": "切换布局",
   "toolBar.runGraphButton": "运行",
