UI: update changes

--- a/src/i18n/hws/zh_CN.json
+++ b/src/i18n/hws/zh_CN.json
@@ -1,6 +1,6 @@
 {
   "attribute.helpText": "帮助文档",
-  "attribute.deviceId": "设备号",
+  "attribute.deviceid": "设备号",
   "attribute.desc": "描述",
   "attribute.advance": "高级",
   "attribute.conf": "配置",
@@ -17,12 +17,12 @@
   "leftmenu.dataset1": "数据项1",
   "dataset.gotobuypage": "前往购买页",
   "consoleName": "ModelBox",
-  "example": "示例",
-  "arrange": "编排",
-  "task": "任务",
+  "example": "示例展示",
+  "arrange": "图编排",
+  "task": "任务管理",
   "firstPage": "首页",
   "exampleDisplay": "示例展示",
-  "editor": "任务编排",
+  "editor": "图编排",
   "taskLists": "任务管理",
   "graph.cavans.tip": "按住CTRL+鼠标左键可拖动画布",
   "graph.creation": "成功新建图",
@@ -64,6 +64,7 @@
   "toolBar.openTutorial": "打开指引",
   "toolBar.selectDemo": "选择示例",
   "toolBar.graphSettingButton": "图属性",
+  "toolBar.graphDescriptionButton": "按键说明",
   "toolBar.graphSelectButton": "选择图",
   "toolBar.graph": "图相关",
   "toolBar.selectDialogButton": "加载图",
@@ -97,6 +98,9 @@
   "toolBar.upload": "上传",
   "toolBar.modal.template": "项目模板",
   "toolBar.modal.port_name": "端口名称",
+  "toolBar.modal.portConfig": "端口设置",
+  "toolBar.modal.addInput": "添加输入端口",
+  "toolBar.modal.addOutput": "添加输出端口",
   "toolBar.modal.flowunit_name": "功能单元名称",
   "toolBar.modal.flowunitPath": "功能单元路径",
   "toolBar.modal.portOption": "端口",
@@ -192,11 +196,11 @@
   "tutorial.runGuide": "运行当前的图，图的运行状态将显示在任务管理页面",
   "tutorial.graphGuide": "用来进行编排的主要界面，此处仅为示例。按着Ctrl+鼠标左键可以拖拽画布。当图中的任一结点处于选中状态时（蓝框），直接使用鼠标左键也可以拖拽画布。图的所有变化，将以graphviz dot形式显示在下方文本编辑框中。",
   "tutorial.textGuide": "对应图编排界面，可使用标准的DOT语法进行文本编辑，所修改内容将反映至图上。",
-  "first.title": "ModelBox AI推理平台",
-  "first.introduction": "ModelBox是一套专门为AI开发者提供的易于使用，高效，高扩展的AI推理开发框架，它可以帮助AI开发者快速完成从模型文件到AI推理应用的开发和上线工作，降低AI算法落地门槛，同时带来AI应用的高稳定性和极致性能。",
-  "first.introductionExample": "示例页面将展示一些例如mnsit的在ModelBox中实现的例子，让用户可以直观地感受到使用ModelBox进行推理的便捷高效。",
-  "first.introductionGraph": "编排页面将提供开发者可视化编排推理的界面，使得开发者只需关注于具体的功能单元实现。",
-  "first.introductionTask": "任务页面将显示所有正在运行的任务状态。",
+  "first.title": "ModelBox AI推理开发框架",
+  "first.introduction": "ModelBox是一套专门为AI开发者提供的易用、高效、高扩展的AI推理开发框架，可以帮助AI开发者快速完成从模型文件到AI推理应用的开发和上线工作，降低AI算法落地门槛，同时带来AI应用的高稳定性和极致性能。",
+  "first.introductionExample": "示例展示页面提供了基于ModelBox框架开发的预置样例展示，开发者可以通过样例的展示和运行对ModelBox图编排有初步了解。",
+  "first.introductionGraph": "图编排页面提供了基于模板创建项目、功能单元和可视化图编排的能力，协助开发者提升AI应用的开发效率。",
+  "first.introductionTask": "任务管理页面提供了图运行任务的管理和HTTP测试功能，帮助开发者进行在线调试。",
   "inference": "推理",
   "virtualType": "推理引擎",
   "model": "模型路径",
