--- a/src/i18n/hws/zh_CN.json
+++ b/src/i18n/hws/zh_CN.json
@@ -88,9 +88,10 @@
   "toolBar.setting.perf.trace.enable": "启用跟踪",
   "toolBar.setting.perf.session.enable": "按会话分类",
   "toolBar.setting.perf.path": "性能分析路径",
-  "toolBar.select.name": "名称",
+  "toolBar.select.name": "图名称",
+  "toolBar.select.path": "路径",
   "toolBar.select.lastChanged": "最近一次修改",
-  "toolBar.select.dotSource": "DOT资源",
+  "toolBar.select.dotSource": "内容",
   "toolBar.select.operation": "操作",
   "toolBar.modal.unitType": "单元类型",
   "toolBar.modal.loadTemplate": "加载模板",
