--- a/src/i18n/hws/zh_CN.json
+++ b/src/i18n/hws/zh_CN.json
@@ -184,6 +184,9 @@
   "message.duplicatePortName": "端口名重复",
   "message.duplicateVirtualFlowunit": "已存在同名虚拟单元",
   "message.graphNameCannotBeNull": "图名称不能为空",
+  "message.currentProjectExistTheSameGraphName": "当前项目存在相同图名称",
+  "message.ifCoverBackendFile": "是否覆盖后端图文件？",
+  "message.warnTheOperationCannotBeRestore": "注意！此操作不可撤销！",
   "tutorial.toolbar": "工具栏",
   "tutorial.undoredo": "回退/重做",
   "tutorial.zoominout": "放大/缩小",
@@ -205,5 +208,35 @@
   "inference": "推理",
   "virtualType": "推理引擎",
   "model": "模型路径",
-  "enginePlugin": "引擎插件"
+  "enginePlugin": "引擎插件",
+  "ifModelboxProject": "是否modelbox项目",
+  "project": "项目",
+  "flowunit": "功能单元",
+  "openCodeProject": "打开代码工程",
+  "description.1": "1. Ctrl+鼠标左键可以拖动画布。",
+  "description.2": "2. 放大缩小：鼠标滚轮，或键盘，-，=按键。",
+  "description.3": "3. 全选：ctrl+a",
+  "description.4": "4. 撤销：ctrl+z",
+  "description.5": "5. 重做：ctrl+u",
+  "description.6": "6. 取消选择：escape",
+  "description.content": "详细内容可参考",
+  "message.pleaseInputIpAddress": "请输入ip地址",
+  "portName": "端口名称",
+  "deviceHandleType": "处理类型",
+  "pleaseNewOrOpenProjectFirst": "请先新建或者打开项目",
+  "errorMessage": "错误信息： ",
+  "openvscode.bat": "打开vscode.bat",
+  "graph": "画布",
+  "detail": "详细信息",
+  "guide": "指导",
+  "port": "端口：",
+  "projectPath": "项目路径：",
+  "notice": "提示：",
+  "bat": "批处理",
+  "message.containerSituationPleaseInputHostMapPort": "容器场景请填写主机映射端口，例如\n\"-p 50022:22\"，填写50022",
+  "message.pleaseUseIDEOpenCodeProject": "请使用IDE打开代码工程",
+  "vscode.1":"1. 用户使用IDE进行代码开发和调试， UI主要提供功能单元创建和图编排可视化等辅助功能",
+  "vscode.2":"2. 推荐使用vscode进行代码开发，具体安装及使用方法可参考",
+  "vscode.3":"，如果环境准备完毕，可以直接下载",
+  "vscode.4":"文件远程启动工程"
 }
