--- a/src/i18n/hws/zh_CN.json
+++ b/src/i18n/hws/zh_CN.json
@@ -116,6 +116,7 @@
   "toolBar.modal.folder": "文件夹",
   "toolBar.modal.return": "返回上级",
   "toolBar.modal.deviceNum": "设备号",
+  "toolBar.copyWithOneKey": "一键复制",
   "toolBar.reLeaseFlowunitPath": "发布功能单元路径",
   "toolBar.debugFlowunitPath": "功能单元扫描路径",
   "toolBar.copyModel": "拷贝模型",
@@ -189,6 +190,7 @@
   "message.currentProjectExistTheSameGraphName": "当前项目存在相同图名称",
   "message.ifCoverBackendFile": "是否覆盖后端图文件？",
   "message.warnTheOperationCannotBeRestore": "注意！此操作不可撤销！",
+  "message.copySuccessfully": "复制成功！",
   "tutorial.toolbar": "工具栏",
   "tutorial.undoredo": "回退/重做",
   "tutorial.zoominout": "放大/缩小",
