UI: update guide

--- a/src/i18n/hws/zh_CN.json
+++ b/src/i18n/hws/zh_CN.json
@@ -217,12 +217,13 @@
   "project": "项目",
   "flowunit": "功能单元",
   "openCodeProject": "打开代码工程",
-  "description.1": "1. Ctrl+鼠标左键可以拖动画布。",
+  "description.1": "1. Ctrl+鼠标左键点击空白区域，可以拖动画布。",
   "description.2": "2. 放大缩小：鼠标滚轮，或键盘，-，=按键。",
   "description.3": "3. 全选：ctrl+a",
   "description.4": "4. 撤销：ctrl+z",
   "description.5": "5. 重做：ctrl+u",
   "description.6": "6. 取消选择：escape",
+  "description.7": "7. 点击错误连线，成功框选后按下delete删除",
   "description.content": "详细内容可参考",
   "message.pleaseInputIpAddress": "请输入ip地址",
   "portName": "端口名称",
